2009-12-16  Martin Leidig  <mleidig@schlund.de>

	Added support for form submit buttons using the <button> element.
	Therefore we introduced the new Pustefix element <pfx:submitbutton>.
	The element supports the same attributes as <pfx:xinp type="submit">,
	but is transformed to <button type="submit"> and supports content,
	which is applied/copied through to the result document.

2009-11-27  Sebastian Marsching <sebastian.marsching@1und1.de>

	Added URL rewrite filter.

2009-11-21  Andreas Kurth  <andreas.kurth@1und1.de>

	Added "contextXMLFile" configuration parameter to pustefix-webapp-plugin
	allowing to add custom META-INF/context.xml file to resulting war file.
	META-INF directory will be created by default now.

2009-11-13  Sebastian Marsching <sebastian.marsching@1und1.de>

	Added support for filtering HTTP requests. Beans implementing the 
	new interface HttpRequestFilter will be automatically detected.
	They can be used in the same way J2EE Filter instances are used. 

	Added new tags <pfx:json-resource> and <pfx:json-resources> 
	to render context resources as javascript in the HTML page.

2009-11-11  Martin Leidig  <mleidig@schlund.de>

	Added support for specifying and/or restricting the set of 
	installed modules which are taken into account for a specific
	application when processing dynamic includes.
	Therefor a module can define so-called filter-attributes in its
	descriptor and an application can define a filter inside its configuration
	which will be applied based on these attributes.

	Example (filtering by a language attribute):

	Module descriptor (META-INF/pustefix-module.xml)

	<module-descriptor>
	  ...
	  <dynamic-includes>
	    <override-modules>
	      <filter-attribute name="lang" value="de"/>
	      <filter-attribute name="foo" value="bar"/>
	      <module name="..."/>
	    </override-modules>
	  </dynamic-includes>
	</module-descriptor>

	Application configuration (META-INF/pustefix-application.xml)

	<pustefix-application>